--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ nav ul li a {
 .text01 { position:absolute; top:70%; left:68%;}
 .text01 > p { 
 	width: 8.7ch;
+	height: 59px;
 	font-size:3.5em; 
 	color:#fff;
 	font-family: 'Noto Sans KR', sans-serif;
