--- a/link/source02/css/style.css
+++ b/link/source02/css/style.css
@@ -980,5 +980,125 @@ footer .footer_in {
 
 /********* 풋터 *********/
 
+/********* 모달 *********/
+
+.blur{
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+a.btn{
+
+	z-index: 9000;
+}
+
+.modal-wrapper{
+  width:100%;
+  height:100%;
+  position:fixed;
+  top:0; left:0;
+  background:rgba(51, 51, 51, 0.5);
+  visibility:hidden;
+  opacity:0;
+	z-index: 9000;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.modal-wrapper.open{
+  opacity:1;
+  visibility:visible;
+}
+
+.modal{
+    width: 25%;
+    height: 25%;
+    display: block;
+    margin: 54% 0 0 -300px;
+    position: relative;
+    top: 55%;
+    left: 50%;
+    background: #f1f0ec;
+  opacity:0;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.modal-wrapper.open .modal{
+  margin-top:-200px;
+  opacity:1;
+}
+
+.head{
+  width:100%;
+    height: 55px;
+    padding: 0.8em 5%;
+  overflow:hidden;
+  background:#aaae9f;
+}
+
+.head > h1 { 
+	font-family: 'Noto Sans KR', sans-serif;
+   	font-size: 1.3rem;
+	color: #fff;
+	letter-spacing: 2px;
+	
+}
+
+.btn-close{
+  width:32px;
+  height:32px;
+  display:block;
+  float:right;
+	z-index: 1000;
+}
+
+.btn-close::before, .btn-close::after{
+  content:'';
+  width:32px;
+  height:6px;
+  display:block;
+  background:#fff;
+	z-index: 1000;
+}
+
+.btn-close::before{
+  margin-top:12px;
+  -webkit-transform:rotate(45deg);
+  -moz-transform:rotate(45deg);
+  -o-transform:rotate(45deg);
+  transform:rotate(45deg);
+}
+
+.btn-close::after{
+  margin-top:-6px;
+  -webkit-transform:rotate(-45deg);
+  -moz-transform:rotate(-45deg);
+  -o-transform:rotate(-45deg);
+  transform:rotate(-45deg);
+}
+
+.content{
+  padding:12%;
+	text-align: center;
+}
+
+.content > p { 
+    font-family: 'Noto Sans KR', sans-serif;
+    color: #aaae9f;
+    letter-spacing: 3px;
+    line-height: 1.5;
+	font-size: 18px;
+	font-weight: 500;
+}
 
 
+
+/********* 모달 *********/
